set up database

--- a/javaServer/src/main/resources/static/index.html
+++ b/javaServer/src/main/resources/static/index.html
@@ -149,7 +149,7 @@
             <div class="path">/db</div>
         </td>
         <td>
-            <span class="description">Clear ALL data from the database</span> This includes users and all game data. No
+            <span class="description">Clear ALL data from the database</span> No
             authorization authToken is required.
         </td>
     </tr>
