--- a/javaServer/src/main/resources/static/index.html
+++ b/javaServer/src/main/resources/static/index.html
@@ -56,7 +56,7 @@
     <tr>
         <td class="endpoint" onclick="dailyCheckIn()">
             <div class="method">[POST]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Prompts the user to fill out their daily check-in</span>
@@ -66,7 +66,7 @@
     <tr>
         <td class="endpoint" onclick="getScore()">
             <div class="method">[GET]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Gets the cumulative score</span>
@@ -76,7 +76,7 @@
     <tr>
         <td class="endpoint" onclick="addMedication()">
             <div class="method">[POST]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Prompts to add medications they take</span>
@@ -86,7 +86,7 @@
     <tr>
         <td class="endpoint" onclick="updateMedication()">
             <div class="method">[PUT]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Updates medications if they change</span>
@@ -96,7 +96,7 @@
     <tr>
         <td class="endpoint" onclick="getMedications()">
             <div class="method">[GET]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">gets all the medications for the user</span>
@@ -106,7 +106,7 @@
     <tr>
         <td class="endpoint" onclick="medications()">
             <div class="method">[POST]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Prompts the user to fill out their daily check-in</span>
@@ -116,7 +116,7 @@
     <tr>
         <td class="endpoint" onclick="addContact()">
             <div class="method">[POST]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">User adds a trusted contact to their profile</span>
@@ -126,7 +126,7 @@
     <tr>
         <td class="endpoint" onclick="updateContact()">
             <div class="method">[PUT]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Updates contact info</span>
@@ -136,7 +136,7 @@
     <tr>
         <td class="endpoint" onclick="getContacts()">
             <div class="method">[GET]</div>
-            <div class="path">/game</div>
+            <div class="path">/loggedIn</div>
         </td>
         <td>
             <span class="description">Updates contact info</span>
