--- a/javaServer/src/main/resources/static/index.html
+++ b/javaServer/src/main/resources/static/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>PALOMA App Server</title>
 
-    <link rel="stylesheet" href="index.css"/>
-    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="/index.css"/>
+    <script defer src="/index.js"></script>
 </head>
 
 <body>
