added getnOverallScores endpoint

--- a/javaServer/src/main/resources/static/index.html
+++ b/javaServer/src/main/resources/static/index.html
@@ -72,6 +72,16 @@
         </td>
     </tr>
     <tr>
+        <td class="endpoint" onclick="getOverallScores()">
+            <div class="method">[GET]</div>
+            <div class="path">/insession/dailyCheckin/getOverallScores</div>
+        </td>
+        <td>
+            <span class="description">Retrieves overall scores for the specified number of days</span>
+            An authorization token is required. Requires numberOfDays parameter in request body.
+        </td>
+    </tr>
+    <tr>
         <td class="endpoint" onclick="getScore()">
             <div class="method">[GET]</div>
             <div class="path">/loggedIn</div>
